@startuml
skinparam classAttributeIconSize 0




Package Application{

class AutomaticTaskController {
+List<AGV> AvailableAGVs()
+List<Order> OrderList()
+List<Order> fifo()
+List<Task> createTask()

}
}

Package Domain{

class Order {
   -NumericID numericID;
    -Custumer customer;
    -ShoppingCart shoppingCart;
    -BOP bop;
    -ShippingMeyhd shipmentMethod;
    -PaymentMethod paymentMethod;
    -PriceWithShipping priceWithShipping;
    -LocalDateTime dateTime;
    -OrderStatus orderStatus;

}

class Task{
 -int id
  -Priority priority
 -Status status
 +Task(AGV agv,Order order,Status status , Priority priority)
}

class AGV{
     -int id;
     -Description description;
     -Model model;
     -MaxWeight maxWeight;
     -Autonomy autonomy;
     -boolean ocuppied;
     -boolean inUse;
}
}


Package Persistence{
class RepositoryFactory{

}

class OrderRepository{

}
class TaskRepository{
TaskById(Integer id);
TaskByOrder(NumericID id);

}
class AGVRepository{

}


}


AutomaticTaskController ..> Task
AutomaticTaskController ..> TaskRepository
AutomaticTaskController ..> RepositoryFactory
RepositoryFactory ..> OrderRepository
RepositoryFactory ..> TaskRepository
RepositoryFactory ..> AGVRepository
OrderRepository ..> TaskRepository
AGVRepository ..> TaskRepository
Task ..> Order
Task ..> AGV



@enduml